@@ -10,15 +10,14 @@
 <tr><td class="label">Command</td>
 <td class="cmdname">Poly</td></tr>
 <tr><td valign="top" class="label">Format</td>
-<td>poly <i>array</i>, <i>segments</i><br/>
+<td>poly <i>array</i><br/>
 poly {x1, y1, x2, y2, x3, y3 ...}</td></tr>
 <tr><td valign="top" class="label">Description</td>
 <td class="desc">Draws a polygon.  The sides of the polygon are defined by the
 values stored in the array, which should be stored as x,y pairs, sequentially.
-The number of sides must be given as the second argument.<br/>
+The length of the array/2 will define the number of points.<br/>
 A polygon can also be specified using a list of x,y pairs enclosed in
-curly braces {}.  If it is defined this way the length parameter and the array variable are not needed.
-</td></tr>
+curly braces {}.</td></tr>
 <tr><td valign="top" class="label">Example</td>
 <td class="desc">
 Both of the code blocks below will draw a green triangle on the graphics window.<br/>
@@ -26,9 +25,9 @@ Both of the code blocks below will draw a green triangle on the graphics window.
 <pre>
 clg
 color green
-dim tri{6)
+dim tri(6)
 tri = {100, 100, 200, 200, 100, 200}
-poly tri, 3
+poly tri
 </pre>
 </div>
 <div class="code">
