@@ -1,3 +1,10 @@
+2009-11-05 j.m.reneau <renejm@users.sourceforge.net> 0.9.3o
+
+	* added STAMP to draw a scaled poly at a position on the graphics display - sort of a simple sprite
+	* added TRUE and FALSE boolean constant values
+	* corrected problem with x&y reversing when an indirect list was defined for a POLY
+	* removed the unused number of points from the syntax of POLY
+
 2009-11-04 j.m.reneau <renejm@users.sourceforge.net> 0.9.3n
 
 	* added SIZE, EXISTS, and SEEK for use during file IO
